# caracal

./: .dockerignore  .gitignore  .trivyignore.yaml  CONTRIBUTING.md  README.md  caracal.toml.example  go.work  go.work.sum  install-cli.sh  install-console.ps1  install-console.sh  install-tui.sh  install.ps1  install.sh  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.config.json  vitest.config.ts
.changeset/: breezy-houses-rhyme.md  config.json
.claude/agents/: release-manager.md
.claude/improvements/: web-ux-improvements.md
.claude/rules/: console-example-naming.md
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  codecov.yml  funding.json
.github/agents/: release-manager.agent.md
.github/instructions/: code-style.instructions.md  command-architecture.instructions.md
apps/: instructions.md
docs/: astro.config.mjs  integrationAuditAndFixPlan.md  package.json
examples/lynxCapital/_mock/sdk/zephyr_pay/: pyproject.toml
examples/lynxCapital/_mock/sdk/zephyr_pay/zephyr_pay/: __init__.py  client.py
governance/: GOVERNANCE.md  INCIDENT_RESPONSE.md  THREAT_MODEL.md
infra/: instructions.md
playbooks/: README  instructions.md
releases/: instructions.md
scripts/: control-api-smoke.mjs  generateReleaseRecord.mjs  instructions.md  postReleaseValidate.sh  publishNpm.sh  publishPackages.sh  publishPypi.sh  pythonTestRequirements.in  rc.mjs  release.mjs  release.sh  releasePlan.mjs  releaseReadiness.mjs  testCi.sh  validateOpsDocs.mjs  validateReleaseManifest.mjs  verifyReleaseAssets.mjs
services/: instructions.md
(+1156 files in other folders)
