[project]
name = "zephyr-pay"
version = "0.1.4rc1"
description = "First-party SDK for the Zephyr Pay mock provider"
requires-python = ">=3.12"
dependencies = ["httpx>=0.28", "idna>=3.15"]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
